--- a/public/index.html
+++ b/public/index.html
@@ -18,22 +18,29 @@
 
 		<h1>APP 2020</h1>
     
-        <form name="form1">
-            <div style="text-align: right;">
-                <select ng-model="ctrl.person_id" ng-options="person._id as person.firstName+' '+person.lastName for person in ctrl.persons" ng-init="ctrl.person_id" ng-change="ctrl.loadPerson()"></select>
-            </div>  
-            <label for="imie">Imię</label>
-            <input class="form-control" id="imie" type="text" ng-model="ctrl.person.firstName"/>
-            <label for="nazwisko">Nazwisko</label>
-            <input class="form-control" id="nazwisko" type="text" ng-model="ctrl.person.lastName"/>
-            <label for="email">E-mail</label>
-            <input class="form-control" id="email" type="text" ng-model="ctrl.person.email"/>
-            <label for="rok">Rok urodzenia</label>
-            <input class="form-control" id="rok" type="number" ng-model="ctrl.person.yearofbirth"/>
-            <br/>
-            <button class="btn btn-primary" ng-click="ctrl.changePerson()" ng-disabled="form1.$pristine">Zmień</button>
+        <form style="float: right;" class="form-inline">
+            <input class="form-control" type="text" ng-model="ctrl.search" ng-change="ctrl.loadPersonsWithZeroSkip()"/>
+            <span class="badge" ng-bind="ctrl.filtered"></span>
+            <span class="badge" ng-bind="ctrl.count"></span>
         </form>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>Imię</th><th>Nazwisko</th><th>email</th><th>Rok urodzenia</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="person in ctrl.persons">
+                    <td ng-bind="person.firstName"></td>
+                    <td ng-bind="person.lastName"></td>
+                    <td ng-bind="person.email"></td>
+                    <td ng-bind="person.yearofbirth"></td>
+                </tr>
+            </tbody>
+        </table>
 
+        <button class="btn btn-primary fa fa-arrow-left" ng-click="ctrl.prev()" ng-disabled="ctrl.skip - ctrl.limit < 0"></button>
+        <button style="float: right;" class="btn btn-primary fa fa-arrow-right" ng-click="ctrl.next()" ng-disabled="ctrl.skip + ctrl.limit >= ctrl.filtered"></button>
 	</div>
 
 <script src="js/angular.min.js"></script>
