--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,7 @@
 <script src="js/ui-bootstrap-tpls.min.js"></script>
 
 <script src="js/app.js"></script>
+<script src="js/loginCtrl.js"></script>
 <script src="js/homeCtrl.js"></script>
 <script src="js/exampleCtrl.js"></script>
 <script src="js/personsCtrl.js"></script>
